applications/app1/components/comp2/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  labels: 
    app.kubernetes.io/instance: app1
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: app1 
  name: app1
  namespace: demo-layout
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: app1
    weight: 100
